[package]
name = "mercantile"
version = "0.0.1"
edition = "2021"
authors = ["Marcel <siegmann@eomap.de>"]
rust-version = "1.76.0"
description = "Mercantile is a Rust library providing utility functions for working with geographical coordinates, web mercator projected coordinates, and map tiles."
repository = "https://github.com/MarcelCode/mercantile"
license-file = "LICENSE.txt"
keywords = ["xyz", "tile", "geospatial", "webmapping"]

[dependencies]
